fix: Updated letter spacing

--- a/0x05-form/05-styles.css
+++ b/0x05-form/05-styles.css
@@ -743,7 +743,7 @@
   .form-group .form-help {
     margin: 0;
     line-height: 1.3;
-    letter-spacing: 0.19rem;
+    letter-spacing: .019rem;
     color: var(--color-dark-grey);
     font-size: var(--font-size-small);
     max-height: 0;
